--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="st">
                 <img src="./image/illustration-grow-together.svg" alt="illustration-grow-together" width="400"
-                    height="300">
+                    height="300" class="stt">
             </div>
         </div>
         <div class="second">
@@ -52,7 +52,7 @@
             </div>
             <div class="nd">
                 <img src="./image/illustration-flowing-conversation.svg" alt="illustration-flowing-conversation"
-                    width="400" height="300">
+                    width="400" height="300" class="ndd">
             </div>
         </div>
         <div class="third">
@@ -62,7 +62,8 @@
                     solution.This means, once signed in to <br> your app, your users can start chating imediately.</p>
             </div>
             <div class="rd">
-                <img src="./image/illustration-your-users.svg" alt="illustration-your-users" width="400" height="300">
+                <img src="./image/illustration-your-users.svg" alt="illustration-your-users" width="400" height="300"
+                    class="rdd">
             </div>
         </div>
     </main>
@@ -85,8 +86,8 @@
                 </svg><br><br>
                 <img src="./image/icon-location.svg" alt="icon-location" class="location"> <span class="Lorem">Lorem
                     ipsum dolor sit amet consectetur</span><br> <span class="Loremm">adipisicing elit. Quidem suscipit,
-                    libero temporibus </span><br> <span class="Loremm"> voluptatem, officiis fuga autem explicabo omnis
-                    corrupti</span><br><br>
+                    libero </span><span class="temp">temporibus</span><br> <span class="Loremm"> voluptatem, officiis
+                    fuga autem explicabo</span> <span class="omnis">omnis corrupti</span><br><br>
                 <img src="./image/icon-phone.svg" alt="icon-phone" class="phone"> <span
                     class="number">+1-543-123-4567</span><br><br>
                 <img src="./image/icon-email.svg" alt="icon-email" class="email"> <span class="example">
